--- a/keyboard/key.html
+++ b/keyboard/key.html
@@ -20,7 +20,7 @@
         <button class="item1">I</button>
         <button class="item1">O</button>
         <button class="item1">P</button>
-        <button class="item2">A</button>
+        <button class="item2"><p>A</p></button>
         <button class="item1">S</button>
         <button class="item1">D</button>
         <button class="item1">F</button>
